Complete remaining rewards checklist items